# apisat_guide_env

./: .env  .gitignore  CLAUDE.md  README.md  main.py  mainv1.tex  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  action.py  dynamics.py  gat_policy.py  reward.py  semantic.py  state.py  target.py  termination.py  vae.py
docs/: literature_review.md
envs/: __init__.py  pettingzoo_wrapper.py  quadrotor_delivery_v0.py  sb3_wrapper.py
logs/quadrotor_delivery_1/: events.out.tfevents.1780304835.niao6.15327.0
logs/quadrotor_delivery_2/: events.out.tfevents.1780304846.niao6.15398.0
logs/quadrotor_delivery_3/: events.out.tfevents.1780304869.niao6.15526.0
logs/quadrotor_delivery_4/: events.out.tfevents.1780304901.niao6.15632.0
logs/quadrotor_delivery_5/: events.out.tfevents.1780304975.niao6.15887.0
logs/quadrotor_delivery_6/: events.out.tfevents.1780305162.niao6.240154.0
models/: ctde_step_682.pt
scripts/: ctde_trainer.py  diagnose_reward_tuning.py  diagnose_rewards.py  eval.py  mappo_train.py  semgat_pretrain.py  semgat_train.py  test_hover_policy.py  train.py
scripts/models/: ctde_step_500083.pt
tests/: test_env.py  test_renderer.py
utils/: __init__.py  config.py  geometry.py  rendering.py  topdown.py  visualization.py
