[project]
name = "apisat-guide-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
